canary/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  selector:
    matchLabels:
      app: prod-caddy   
  template:
    metadata:
      labels:
        app: prod-caddy
    spec:
      volumes:
      - name: html
        configMap:
          name: html-prod
