canary/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp       
spec:
  selector:
    app: prod-caddy
